--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "angular": "^1.7.9",
     "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
